--- a/DigimonWorldNet6/Frontend.WPF/MainWindow.xaml
+++ b/DigimonWorldNet6/Frontend.WPF/MainWindow.xaml
@@ -7,10 +7,13 @@
         xmlns:enums="clr-namespace:Generics.Enums;assembly=Generics"
         xmlns:combatStatValidation="clr-namespace:DigimonWorld.Frontend.WPF.Validation.CombatStats"
         xmlns:nonCombatStatValidation="clr-namespace:DigimonWorld.Frontend.WPF.Validation.NonCombatStats"
+        xmlns:conversion="clr-namespace:DigimonWorld.Frontend.WPF.Conversion"
         mc:Ignorable="d"
         d:DataContext="{d:DesignInstance Type=wpf:EvolutionToolViewModel, IsDesignTimeCreatable=True}"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="435" Width="800">
     <Window.Resources>
+        <conversion:EnumToImageConverter x:Key="EnumToImageConverter"/>
+        
         <ObjectDataProvider x:Key="DigimonTypes"
                             MethodName="GetValues" ObjectType="{x:Type enums:DigimonType}">
             <ObjectDataProvider.MethodParameters>
@@ -67,12 +70,13 @@
             <ColumnDefinition Width="*" />
             <ColumnDefinition Width="*" />
             <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
 
-        <GroupBox Header="Your digimon" Style="{StaticResource GroupBoxStyle}">
+        <GroupBox Grid.Column="0" Grid.Row="0" Header="Your digimon" Style="{StaticResource GroupBoxStyle}">
             <Grid>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*" />
@@ -80,8 +84,6 @@
                     <ColumnDefinition Width="*" />
                 </Grid.ColumnDefinitions>
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="25" />
-                    <RowDefinition Height="25" />
                     <RowDefinition Height="25" />
                     <RowDefinition Height="25" />
                     <RowDefinition Height="25" />
@@ -105,7 +107,8 @@
                 <ComboBox Name="Digimon" Grid.Column="1" Grid.Row="0" Grid.ColumnSpan="2"
                           SelectedIndex="0"
                           Style="{StaticResource ComboboxStyle}"
-                          ItemsSource="{Binding Source={StaticResource DigimonTypes}}">
+                          ItemsSource="{Binding Source={StaticResource DigimonTypes}}"
+                          SelectedItem="{Binding DigimonType}">
                 </ComboBox>
 
                 <Label Grid.Column="0" Grid.Row="1" Content="HP:" Style="{StaticResource LabelStyle}" />
@@ -240,7 +243,7 @@
                     </TextBox.Text>
                 </TextBox>
 
-                <Button Grid.Column="0" Grid.Row="16" Grid.ColumnSpan="3"
+                <Button Grid.Column="0" Grid.Row="14" Grid.ColumnSpan="3"
                         Content="Calculate evolution"
                         Command="{Binding SetEvolutionResult}">
                     <Button.Style>
@@ -274,5 +277,10 @@
 
             </Grid>
         </GroupBox>
+
+        <Image Grid.Column="1" Grid.Row="0" Width="200" Source="{Binding DigimonType, Converter={StaticResource EnumToImageConverter}}" />
+        <Image Grid.Column="2" Grid.Row="0" Height="100" Source="/Images/Arrow-Right.jpg" />
+        <Image Grid.Column="3" Grid.Row="0" Width="200" Source="{Binding  EvolutionResult, Mode=OneWay, Converter={StaticResource EnumToImageConverter}}" />
+
     </Grid>
 </Window>
