--- a/DigimonWorldNet6/Frontend.WPF/App.xaml
+++ b/DigimonWorldNet6/Frontend.WPF/App.xaml
@@ -159,7 +159,7 @@
                     <ControlTemplate TargetType="ComboBox">
                         <Grid>
                             <!-- Outer Border for Bottom and Right -->
-                            <Border BorderBrush="#6789A5" BorderThickness="0,0,2,2">
+                            <Border Name="OuterBorder" BorderBrush="#6789A5" BorderThickness="0,0,2,2">
                                 <!-- Inner Border for Top and Left -->
                                 <Border BorderBrush="#060100" BorderThickness="2,2,0,0">
                                     <!-- Background and ComboBox Content -->
@@ -172,7 +172,8 @@
                                                   ContentTemplate="{TemplateBinding SelectionBoxItemTemplate}">
                                         <ToggleButton.Template>
                                             <ControlTemplate TargetType="ToggleButton">
-                                                <Border Background="{TemplateBinding Background}"
+                                                <Border Name="ToggleButtonBorder"
+                                                        Background="{TemplateBinding Background}"
                                                         BorderBrush="{TemplateBinding BorderBrush}"
                                                         BorderThickness="{TemplateBinding BorderThickness}">
                                                     <ContentPresenter Content="{TemplateBinding Content}"
@@ -183,7 +184,7 @@
                                                 <ControlTemplate.Triggers>
                                                     <!-- MouseOver Trigger -->
                                                     <Trigger Property="IsMouseOver" Value="True">
-                                                        <Setter Property="Background" Value="#567D91" />
+                                                        <Setter TargetName="ToggleButtonBorder" Property="Background" Value="#567D91" />
                                                     </Trigger>
                                                 </ControlTemplate.Triggers>
                                             </ControlTemplate>
@@ -209,6 +210,12 @@
                                 </Border>
                             </Popup>
                         </Grid>
+                        <!-- ComboBox Hover Trigger -->
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="IsMouseOver" Value="True">
+                                <Setter TargetName="OuterBorder" Property="Background" Value="#456A7D" />
+                            </Trigger>
+                        </ControlTemplate.Triggers>
                     </ControlTemplate>
                 </Setter.Value>
             </Setter>
