--- a/DigimonWorldNet6/Frontend.WPF/App.xaml
+++ b/DigimonWorldNet6/Frontend.WPF/App.xaml
@@ -2,16 +2,16 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Application.Resources>
-        <FontFamily x:Key="DW1Font">pack://application:,,,/Frontend.WPF;component/Fonts/DW1_US_Regular.ttf#DW1 US</FontFamily>
+        <FontFamily x:Key="Dw1Font">pack://application:,,,/Frontend.WPF;component/Fonts/DW1_US_Regular.ttf#DW1 US</FontFamily>
 
         <Style TargetType="TextBlock">
-            <Setter Property="FontFamily" Value="{StaticResource DW1Font}" />
+            <Setter Property="FontFamily" Value="{StaticResource Dw1Font}" />
             <Setter Property="FontWeight" Value="Bold" />
             <Setter Property="Foreground" Value="#D6D6D8" />
         </Style>
 
         <Style TargetType="Control">
-            <Setter Property="FontFamily" Value="{StaticResource DW1Font}" />
+            <Setter Property="FontFamily" Value="{StaticResource Dw1Font}" />
         </Style>
 
         <Style TargetType="Window">
@@ -114,7 +114,7 @@
 
         <Style x:Key="DefaultTextBoxStyle" TargetType="{x:Type TextBox}" BasedOn="{StaticResource {x:Type TextBox}}">
             <Style.Setters>
-                <Setter Property="FontFamily" Value="{StaticResource DW1Font}" />
+                <Setter Property="FontFamily" Value="{StaticResource Dw1Font}" />
                 <Setter Property="Background" Value="#354A5B" />
                 <Setter Property="Foreground" Value="#D6D6D8" />
                 <Setter Property="BorderBrush" Value="#6987A3" />
