--- a/DigimonWorldNet6/Frontend.WPF/MainWindow.xaml
+++ b/DigimonWorldNet6/Frontend.WPF/MainWindow.xaml
@@ -90,7 +90,8 @@
                                               SelectedIndex="0"
                                               Style="{StaticResource DefaultComboboxStyle}"
                                               ItemsSource="{Binding Source={StaticResource DigimonTypes}}"
-                                              SelectedItem="{Binding DigimonType}">
+                                              SelectedItem="{Binding DigimonType}"
+                                              IsTabStop="False">
                                     </ComboBox>
 
                                     <Label Grid.Column="0" Grid.Row="1" Content="HP:" Style="{StaticResource DefaultLabelStyle}" />
@@ -251,7 +252,7 @@
                                                                            Height="20"
                                                                            HorizontalAlignment="Left"
                                                                            VerticalAlignment="Center"
-                                                                           Margin="0,0,15,0"
+                                                                           Margin="0,0,5,0"
                                                                            Source="/Images/Emotions/Evolution/evo1.png" />
 
                                                                     <!-- Button Text -->
